# HelloCMake

./: CMakeLists.txt
include/: Person2.h
src/: Person.cpp  main.cpp  main2.cpp
test/: CMakeLists.txt
